# am

./: .gitignore  404.html  BACKLOG.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  Makefile  PLAN.md  SPEC.md  config.md  git-cliff.toml  index.html  install.sh  mkdocs.yml  release.toml  sh.sh  sitemap.xml
.claude/commands/: release.md
.github/aur/: PKGBUILD.template
.github/homebrew/: am.rb.template
.github/workflows/: ci.yml  docs.yml  images.yml  release.yml
concepts/: index.html
dockerfiles/: Dockerfile.am-dev  Dockerfile.claude  Dockerfile.claude-minimal  Dockerfile.copilot  Dockerfile.copilot-minimal  Dockerfile.docs
docs/: concepts.md  index.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: ci-cd-integration.md  claude-code.md  custom-images.md  faq.md  github-copilot.md  troubleshooting.md
docs/reference/: commands.md  commit-trailers.md  configuration.md  quick-reference.md
docs/stylesheets/: extra.css
examples/: Dockerfile.golang  Dockerfile.python  Dockerfile.rust  Dockerfile.terraform  Dockerfile.terragrunt
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guides/ci-cd-integration/: index.html
guides/claude-code/: index.html
guides/custom-images/: index.html
guides/faq/: index.html
guides/github-copilot/: index.html
guides/troubleshooting/: index.html
reference/commands/: index.html
reference/commit-trailers/: index.html
reference/configuration/: index.html
reference/quick-reference/: index.html
search/: search_index.json
specs/: aider-integration.md  codex-integration.md  context-aware-messages.md  gemini-integration.md  polish-and-distribution.md  v1.md
src/: cli.rs  command.rs  config.rs  container.rs  error.rs  main.rs  session.rs  tmux.rs  worktree.rs
tests/: cucumber.rs
tests/features/: clean.feature  container.feature  destroy.feature  error_handling.feature  full_flow.feature  generate_config.feature  init.feature  jj.feature  list.feature  start.feature  tmux.feature
