[package]
name = "am"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "am"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
which = "6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
cucumber = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "cucumber"
harness = false
