[package]
name = "am"
version = "0.4.0"
edition = "2021"
description = "Creates isolated environments for coding agents"
authors = ["David Stanek"]
license = "MIT"
repository = "https://github.com/dstanek/agent-manager"

[[bin]]
name = "am"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
which = "6"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[lints.rust]
unused = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dev-dependencies]
tempfile = "3"
cucumber = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "cucumber"
harness = false

[package.metadata.deb]
section = "devel"
priority = "optional"
assets = [
    ["target/release/am", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/am", dest = "/usr/bin/am", mode = "755" },
]
